Swap javax.xml.bind.DatatypeConverter for java.util.Base64